<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.authentication.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="23dp"
                android:gravity="center"
                android:text="@string/use_a_local_account_to_log_in"
                android:textColor="@color/colorGreen"
                android:background="@color/material_dynamic_primary90"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcom"
                android:layout_marginStart="35dp"
                android:layout_marginTop="73dp"
                android:text="@string/email"
                android:textColor="@color/colorRed" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:background="@color/teal_200"
                android:hint="@string/add_your_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:autofillHints="" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/colorRed" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:background="@color/teal_200"
                android:hint="@string/add_your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:autofillHints=""
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password"
                android:layout_marginStart="210dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="23dp"
                android:background="@color/material_dynamic_primary90"
                android:text="@string/forgot_your_password"
                android:textAlignment="center"
                android:textColor="@color/colorRed"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/common_google_signin_btn_icon_light"
                android:padding="4dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/needs_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="23dp"
                android:text="@string/register_as_a_new_user"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:background="@color/material_dynamic_primary90"
                android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>